--- a/css.css
+++ b/css.css
@@ -1,3 +1,11 @@
+html, body {
+    width: 100%;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .carousel-item img{
     position: relative;
     z-index: -1;
